--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Menu Card</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/responsive.css"
 </head>
 <body>
 	<section>
 		<div class="container">
 			<div class="row">
-				<div class="col-12 line">
+				<div class="col-12 col-mb-12 col-tb-12 line">
 					<h3>MENU</h3>
 					<h1>Check Our Tasty Menu</h1>
 				</div>
-				<div class="col-12">
+				<div class="col-12 col-mb-12 col-tb-12">
 					<nav class="type">
 						<ul class="list">
 							<li class="clr"><a href="#">All</a></li>
@@ -24,7 +26,7 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="col-6">
+				<div class="col-6 col-mb-12 col-tb-12">
 					<div class="menu">
 						<div class="menu_sub">
 						<div class="imges">
@@ -40,7 +42,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-6">
+				<div class="col-6 col-mb-12 col-tb-12">
 					<div class="menu">
 						<div class="menu_sub">
 						<div class="imges">
@@ -56,7 +58,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-6">
+				<div class="col-6 col-mb-12 col-tb-12">
 					<div class="menu">
 						<div class="menu_sub">
 						<div class="imges">
@@ -72,7 +74,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-6">
+				<div class="col-6 col-mb-12 col-tb-12">
 					<div class="menu">
 						<div class="menu_sub">
 						<div class="imges">
@@ -88,7 +90,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-6">
+				<div class="col-6 col-mb-12 col-tb-12">
 					<div class="menu">
 						<div class="menu_sub">
 						<div class="imges">
@@ -104,7 +106,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-6">
+				<div class="col-6 col-mb-12 col-tb-12">
 					<div class="menu">
 						<div class="menu_sub">
 						<div class="imges">
@@ -120,7 +122,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-6">
+				<div class="col-6 col-mb-12 col-tb-12">
 					<div class="menu">
 						<div class="menu_sub">
 						<div class="imges">
@@ -136,7 +138,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-6">
+				<div class="col-6 col-mb-12 col-tb-12">
 					<div class="menu">
 						<div class="menu_sub">
 						<div class="imges">
